--- a/src/app/shared-materials/shared-button-flat/shared-button-flat.component.html
+++ b/src/app/shared-materials/shared-button-flat/shared-button-flat.component.html
@@ -1,5 +1,6 @@
 <button [matBadge] = "matB" [matBadgeColor]="matBc" [matBadgePosition]="matBp"
-[style.height]="height" [style.width] = "width" mat-flat-button [color] = "color" 
+[style.height]="height" [style.width] = "width" mat-flat-button [color] = "color"
+[style.minHeight] = "minHeight"
 class = "txs"
 style="display: flex;flex-wrap: wrap;justify-content: center;align-items: center;white-space: normal;">
   <ng-content></ng-content>
