--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <div class="row p0">
+    <div class="row p0" *ngIf="search_results">
 
 
       <div class="col-lg-4 col-md-6 col-12 mt-3 p0" *ngFor="let suggestion of search_results.slice(getStart(),  getEnd())">
@@ -67,7 +67,7 @@
 
       <div class="col-12 mt-3 p0">
         <div class="mx-3">
-          <mat-paginator [length]="this.search_results.length"
+          <mat-paginator [length]="search_results ? search_results.length : 0"
           [pageSize]="pageSize"
           [pageSizeOptions]="pageSizeOptions  "
           (page)="pageEvent = $event">
