--- a/src/app/core/header/header-lap/auth-dialogue/login/login.component.html
+++ b/src/app/core/header/header-lap/auth-dialogue/login/login.component.html
@@ -2,45 +2,48 @@
 
 <div class="container mt-3">
 
-  <div class="row">
+  <form [formGroup]="form">
+    <div class="row">
 
-    <div class="col-12">
-      <mat-form-field>
-        <input matInput placeholder="email">
-      </mat-form-field>
-    </div>
-
-    <div class="col-12">
+      <div class="col-12">
         <mat-form-field>
-          <input matInput placeholder="password">
+          <input matInput placeholder="email" formControlName="username" required email>
         </mat-form-field>
-    </div>
-
-    <div class="col-6" >
-      <div class="mx-2">
-        <button mat-stroked-button>
-          Login
-        </button>
       </div>
-    </div>
 
-    <div class="col-6" >
-      <div class="mx-2">
-        <button mat-stroked-button>
-          Forgot Password
-        </button>
+      <div class="col-12">
+          <mat-form-field>
+            <input matInput type = "password" placeholder="password" formControlName="password" required password>
+          </mat-form-field>
       </div>
-    </div>
 
-    <div class="col-12 mt-3" >
-      <div class="mx-2">
-        <button color = "warn" mat-raised-button>
-          Login With Google  Account
-        </button>
+      <div class="col-6" >
+        <div class="mx-2">
+          <button mat-stroked-button (click)="login()" >
+            Login
+          </button>
+        </div>
       </div>
-    </div>
 
-  </div>
+      <div class="col-6" >
+        <div class="mx-2">
+          <!-- TODO do somthing with this -->
+          <button (click)="signup()"  mat-stroked-button>
+            Forgot Password
+          </button>
+        </div>
+      </div>
+
+      <div class="col-12 mt-3" >
+        <div class="mx-2">
+          <button color = "warn" mat-raised-button>
+            Login With Google  Account
+          </button>
+        </div>
+      </div>
+
+    </div>
+  </form>
 
 </div>
 
