--- a/src/app/core/header/header-lap/auth-dialogue/auth-dialogue.component.html
+++ b/src/app/core/header/header-lap/auth-dialogue/auth-dialogue.component.html
@@ -1,7 +1,7 @@
 
 
-
-<div style="max-height: 70vh;" [perfectScrollbar]="{suppressScrollY: false,suppressScrollX: true}">
+<!-- TODO the code would break without the style="background: transparent" dunno why but it has to be fixed -->
+<div style="max-height: 70vh;" [perfectScrollbar]="{suppressScrollY: false,suppressScrollX: true}" style="background: transparent">
 
 
 
