--- a/src/app/core/header/header-lap/header-lap.component.html
+++ b/src/app/core/header/header-lap/header-lap.component.html
@@ -61,6 +61,7 @@
             <div class="col-6 col-6 p0" >
               <div class="mx-3 fh" >
                 <app-shared-button-flat [color]="'accent'" [height]="'60%'"
+                (click)="routingService.goToShoppingCart()"
                 style="white-space: normal;" class="centrifyc fh fw" [width] = "'100%'"
                 [matB]="shoppingCartProducts.length"
                 [matBc]="'warn'"
