--- a/src/app/core/header/header-lap/header-lap.component.html
+++ b/src/app/core/header/header-lap/header-lap.component.html
@@ -63,7 +63,7 @@
                 <app-shared-button-flat [color]="'accent'" [height]="'60%'"
                 (click)="routingService.goToShoppingCart()"
                 style="white-space: normal;" class="centrifyc fh fw" [width] = "'100%'"
-                [matB]="shoppingCartProducts.length"
+                [matB]="shoppingCartProducts.orders.length"
                 [matBc]="'warn'"
                 [matBp]="'before'" >
                 <i class="material-icons auto-wrap"
