--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -9,31 +9,31 @@
         <form [formGroup] = "form">
           <div formArrayName = "amounts">
 
-            <div class="row p0" *ngFor="let prod of products; let i = index"
+            <div class="row p0" *ngFor="let prod of products.orders; let i = index"
             [formGroupName] = "i">
 
               <div class="border-detail col-lg-1 col-md-6 col-12 p0 mt-3 centrifyc" >
-                <img [src]="prod.image_address[0]" class="img-fluid" [alt]="prod.name + 'image' " >
+                <img [src]="prod.product.image_address[0]" class="img-fluid" [alt]="prod.product.name + 'image' " >
               </div>
 
               <!-- TODO add a pip line to add space to numbers so that you'll be able to show the full name -->
               <div class="border-detail col-lg-2 col-md-3 col-12 p0 mt-3 centrifyc">
                 <div class="mx-3">
                   name : <br>
-                  {{prod.name}}
+                  {{prod.product.name}}
                 </div>
               </div>
               <!-- TODO add a pip line to add space to numbers so that you'll be able to show the full amount -->
               <div class="border-detail col-lg-1 col-md-3 col-12 p0 mt-3 centrifyc">
                 <div class="mx-3">
                   price : <br>
-                  {{prod.promo_code ? prod.main_price * (1-prod.promo_code.percent) : prod.main_price }} $
+                  {{prod.product.promo_code ? prod.product.main_price * (1-prod.product.promo_code.percent) : prod.product.main_price }} $
                 </div>
               </div>
 
               <div class="col-lg-3 col-12 p0 mt-3 text-centerify" *ngIf="bs.large||bs.xl">
                 <div class="mx-3 centrifyc">
-                  <app-shared-button-flat (click)="prod.quantity = 0"
+                  <app-shared-button-flat (click)="prod.count = 0"
                   class="fw" [height] = "''" color="warn">
                     remove
                   </app-shared-button-flat>
@@ -42,7 +42,7 @@
 
               <div class="col-lg-3 co l-12 p0 mt-3 text-centerify">
                 <div class="mx-3 centrifyc">
-                  <app-shared-button-flat (click)="prod.quantity = prod.quantity + 1"
+                  <app-shared-button-flat (click)="shoppingCartService.addProduct(prod.product)"
                   class="fw" [height] = "''" color="accent">
                     add
                   </app-shared-button-flat>
@@ -51,7 +51,7 @@
 
               <div class="col-lg-3 col-12 p0 mt-3 text-centerify" *ngIf="!(bs.large||bs.xl)">
                 <div class="mx-3 centrifyc">
-                  <app-shared-button-flat (click)="prod.quantity = 0"
+                  <app-shared-button-flat (click)="shoppingCartService.removeProduct(prod.product)"
                   class="fw" [height] = "''" color="warn">
                     remove
                   </app-shared-button-flat>
@@ -62,7 +62,7 @@
               <div class="col-lg-2 col-12 mt-3 p0">
                 <div [ngClass]="{'ml-3' : bs.large || bs.xl}">
                   <mat-form-field class="fw" color="primary">
-                    <input matInput type="number" placeholder="Number"  formControlName = "amount" [(ngModel)] = "prod.quantity">
+                    <input matInput type="number" placeholder="Number"  formControlName = "amount" [(ngModel)] = "prod.count">
                     <!-- <mat-hint>Please Select At Least 0 Of This Product</mat-hint> -->
                     <mat-error *ngIf="true">The Amount Of Product Is Not Correct.</mat-error>
                   </mat-form-field>
