--- a/src/app/main/main-page/promos-with-timer/promos-with-timer.component.html
+++ b/src/app/main/main-page/promos-with-timer/promos-with-timer.component.html
@@ -26,8 +26,8 @@
 
 
     <!-- The content -->
-    <div class="col-9 p0" >
-      <div class="container-fluid fh">
+    <div class="col-9 p0" (click)="routingService.goToProduct(promos[cnt].product)"  >
+      <div class="container-fluid fh cursorP">
         <div class="row p0 fh">
 
 
