--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -7,4 +7,16 @@
   flex-wrap: wrap;
 }
 
+.container-image{
+  width: 100%;
+  position: relative;
+  padding-top: 75%;
+}
+.img-s{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+}
 
